--- a/Akademik.html
+++ b/Akademik.html
@@ -18,7 +18,7 @@
                 <li><a class="menu-v" href="index.html">Home</a></li>
                 <li><a class="menu" href="#">Profile</a></li>
                 <li>
-                    <a class="menu"href="Akademik.html">Akademik </a>
+                    <a class="menu"href="Akademik.html">Akademik ▼</a>
                     <ul class="dropdown">
                         <li><a href="#">PPLG</a></li>
                         <li><a href="#">TKJ</a></li>
