--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <li><a class="menu-v" href="index.html">Home</a></li>
                 <li><a class="menu" href="#">Profile</a></li>
                 <li>
-                    <a class="menu"href="Akademik.html">Akademik </a>
+                    <a class="menu"href="Akademik.html">Akademik ▼</a>
                     <ul class="dropdown">
-                        <li><a href="#">PPLG</a></li>
-                        <li><a href="#">TKJ</a></li>
-                        <li><a href="#">DKV</a></li>
+                        <li><a class="menu-font" href="#">PPLG</a></li>
+                        <li><a class="menu-font" href="#">TKJ</a></li>
+                        <li><a class="menu-font" href="#">DKV</a></li>
                     </ul>                    
                 </li>
                 <li><a class="menu" href="#">Fasilitas</a></li>
